infra/services.yml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: <NAMESPACE>
spec:
  selector:
    app: front
  ports:
  - name: front
    port: 3000
    targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: <NAMESPACE>
spec:
  selector:
    app: api
  ports:
  - name: api
    port: 5000
    targetPort: 5000
