infra/network.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: <NAMESPACE>
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - <WEB_DOMAIN>
    - <API_DOMAIN>
    secretName: <NAMESPACE>-tls
  rules:
  - host: <WEB_DOMAIN>
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service: 
            name: web
            port: 
              number: 3000
  - host: <API_DOMAIN>
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service: 
            name: api
            port: 
              number: 5000
